--- a/css/styles.css
+++ b/css/styles.css
@@ -11725,6 +11725,36 @@ body {
   font-size: 2rem;
   text-align-last: center;
 }
+
+.card_pocra_count {
+  --bs-card-spacer-y: 1rem;
+  --bs-card-title-spacer-y: 0.5rem;
+  --bs-card-border-width: 1px;
+  --bs-card-border-color: var(--bs-border-color-translucent);
+  --bs-card-border-radius: 0.375rem;
+  --bs-card-box-shadow: ;
+  --bs-card-inner-border-radius: calc(0.375rem - 1px);
+  /* --bs-card-cap-padding-y: 0.5rem; */
+  --bs-card-cap-padding-x: 1rem;
+  --bs-card-cap-bg: rgba(0, 0, 0, 0.03);
+  --bs-card-cap-color: ;
+  --bs-card-height: ;
+  --bs-card-color: ;
+  --bs-card-bg: #fff;
+  --bs-card-img-overlay-padding: 1rem;
+  --bs-card-group-margin: 0.75rem;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  height: var(--bs-card-height);
+  word-wrap: break-word;
+  background-color: var(--bs-card-bg);
+  background-clip: border-box;
+  border: var(--bs-card-border-width) solid var(--bs-card-border-color);
+  border-radius: var(--bs-card-border-radius);
+}
+
 /* .pocra-taluka {
   float: left;
 } */
@@ -11776,4 +11806,22 @@ body {
   .title-grid #sub-title {
     font-size: 0.5rem;
   }
+}
+
+/* iframe */
+#bannerContainer {
+  background: #b7d6b7;
+  /* padding: auto; */
+}
+.banner {
+  /*text-align: center;*/
+  background-color: transparent;
+}
+.tabs .nav-link {
+  color: black !important;
+
+  font-size: 20px;
+}
+.tabs .nav-link.active {
+  font-weight: bold;
 }
