nrm activity loaded on map

--- a/css/styles.css
+++ b/css/styles.css
@@ -11728,6 +11728,7 @@ body {
 
 .card_pocra_count {
   --bs-card-spacer-y: 1rem;
+  /* --bs-card-spacer-x: 1rem; */
   --bs-card-title-spacer-y: 0.5rem;
   --bs-card-border-width: 1px;
   --bs-card-border-color: var(--bs-border-color-translucent);
@@ -11767,6 +11768,15 @@ body {
 
 /* Dashboard Map */
 .administrative-map {
+  width: 100%;
+  height: 50rem;
+}
+/* dbt pages */
+.dbt-farmer-map{
+  width: 100%;
+  height: 50rem;
+}
+.dbt-nrm-map{
   width: 100%;
   height: 50rem;
 }
