--- a/css/styles.css
+++ b/css/styles.css
@@ -11,52 +11,94 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
 :root {
-  --bs-blue: #0d6efd;
-  --bs-indigo: #6610f2;
-  --bs-purple: #6f42c1;
-  --bs-pink: #d63384;
-  --bs-red: #dc3545;
-  --bs-orange: #fd7e14;
-  --bs-yellow: #ffc107;
-  --bs-green: #198754;
-  --bs-teal: #20c997;
-  --bs-cyan: #0dcaf0;
+  --bs-gray: #69707a;
+  --bs-gray-dark: #363d47;
+  --bs-gray-100: #f2f6fc;
+  --bs-gray-200: #e0e5ec;
+  --bs-gray-300: #d4dae3;
+  --bs-gray-400: #c5ccd6;
+  --bs-gray-500: #a7aeb8;
+  --bs-gray-600: #69707a;
+  --bs-gray-700: #4a515b;
+  --bs-gray-800: #363d47;
+  --bs-gray-900: #212832;
+  --bs-primary: #dc392d;
+  --bs-secondary: #e0e5ec;
+  --bs-success: #00ac69;
+  --bs-info: #00cfd5;
+  --bs-warning: #f4a100;
+  --bs-danger: #e81500;
+  --bs-light: #f2f6fc;
+  --bs-dark: #212832;
   --bs-black: #000;
   --bs-white: #fff;
-  --bs-gray: #6c757d;
-  --bs-gray-dark: #343a40;
-  --bs-gray-100: #f8f9fa;
-  --bs-gray-200: #e9ecef;
-  --bs-gray-300: #dee2e6;
-  --bs-gray-400: #ced4da;
-  --bs-gray-500: #adb5bd;
-  --bs-gray-600: #6c757d;
-  --bs-gray-700: #495057;
-  --bs-gray-800: #343a40;
-  --bs-gray-900: #212529;
-  --bs-primary: #0d6efd;
-  --bs-secondary: #6c757d;
-  --bs-success: #198754;
-  --bs-info: #0dcaf0;
-  --bs-warning: #ffc107;
-  --bs-danger: #dc3545;
-  --bs-light: #f8f9fa;
-  --bs-dark: #212529;
-  --bs-primary-rgb: 13, 110, 253;
-  --bs-secondary-rgb: 108, 117, 125;
-  --bs-success-rgb: 25, 135, 84;
-  --bs-info-rgb: 13, 202, 240;
-  --bs-warning-rgb: 255, 193, 7;
-  --bs-danger-rgb: 220, 53, 69;
-  --bs-light-rgb: 248, 249, 250;
-  --bs-dark-rgb: 33, 37, 41;
+  --bs-red: #dc392d;
+  --bs-orange: #f76400;
+  --bs-yellow: #f4a100;
+  --bs-green: #00ac69;
+  --bs-teal: #00ba94;
+  --bs-cyan: #00cfd5;
+  --bs-blue: #0061f2;
+  --bs-indigo: #5800e8;
+  --bs-purple: #6900c7;
+  --bs-pink: #e30059;
+  --bs-red-soft: #f0e3e7;
+  --bs-orange-soft: #f3e7e3;
+  --bs-yellow-soft: #f2eee3;
+  --bs-green-soft: #daefed;
+  --bs-teal-soft: #daf0f2;
+  --bs-cyan-soft: #daf2f8;
+  --bs-blue-soft: #dae7fb;
+  --bs-indigo-soft: #e3ddfa;
+  --bs-purple-soft: #e4ddf7;
+  --bs-pink-soft: #f1ddec;
+  --bs-primary-soft: #f0e3e7;
+  --bs-secondary-soft: #f0f4fa;
+  --bs-success-soft: #daefed;
+  --bs-info-soft: #daf2f8;
+  --bs-warning-soft: #f2eee3;
+  --bs-danger-soft: #f1e0e3;
+  --bs-primary-rgb: 220, 57, 45;
+  --bs-secondary-rgb: 224, 229, 236;
+  --bs-success-rgb: 0, 172, 105;
+  --bs-info-rgb: 0, 207, 213;
+  --bs-warning-rgb: 244, 161, 0;
+  --bs-danger-rgb: 232, 21, 0;
+  --bs-light-rgb: 242, 246, 252;
+  --bs-dark-rgb: 33, 40, 50;
+  --bs-red-rgb: 220, 57, 45;
+  --bs-orange-rgb: 247, 100, 0;
+  --bs-yellow-rgb: 244, 161, 0;
+  --bs-green-rgb: 0, 172, 105;
+  --bs-teal-rgb: 0, 186, 148;
+  --bs-cyan-rgb: 0, 207, 213;
+  --bs-blue-rgb: 0, 97, 242;
+  --bs-indigo-rgb: 88, 0, 232;
+  --bs-purple-rgb: 105, 0, 199;
+  --bs-pink-rgb: 227, 0, 89;
+  --bs-red-soft-rgb: 240, 227, 231;
+  --bs-orange-soft-rgb: 243, 231, 227;
+  --bs-yellow-soft-rgb: 242, 238, 227;
+  --bs-green-soft-rgb: 218, 239, 237;
+  --bs-teal-soft-rgb: 218, 240, 242;
+  --bs-cyan-soft-rgb: 218, 242, 248;
+  --bs-blue-soft-rgb: 218, 231, 251;
+  --bs-indigo-soft-rgb: 227, 221, 250;
+  --bs-purple-soft-rgb: 228, 221, 247;
+  --bs-pink-soft-rgb: 241, 221, 236;
+  --bs-primary-soft-rgb: 240, 227, 231;
+  --bs-secondary-soft-rgb: 240, 244, 250;
+  --bs-success-soft-rgb: 218, 239, 237;
+  --bs-info-soft-rgb: 218, 242, 248;
+  --bs-warning-soft-rgb: 242, 238, 227;
+  --bs-danger-soft-rgb: 241, 224, 227;
   --bs-white-rgb: 255, 255, 255;
   --bs-black-rgb: 0, 0, 0;
-  --bs-body-color-rgb: 33, 37, 41;
+  --bs-body-color-rgb: 105, 112, 122;
   --bs-body-bg-rgb: 255, 255, 255;
-  --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto,
-    "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --bs-font-sans-serif: "Metropolis", -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas,
     "Liberation Mono", "Courier New", monospace;
   --bs-gradient: linear-gradient(
@@ -64,26 +106,28 @@
     rgba(255, 255, 255, 0.15),
     rgba(255, 255, 255, 0)
   );
-  --bs-body-font-family: var(--bs-font-sans-serif);
+  --bs-body-font-family: Metropolis, -apple-system, BlinkMacSystemFont, Segoe UI,
+    Roboto, Helvetica Neue, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji,
+    Segoe UI Symbol, Noto Color Emoji;
   --bs-body-font-size: 1rem;
   --bs-body-font-weight: 400;
   --bs-body-line-height: 1.5;
-  --bs-body-color: #212529;
+  --bs-body-color: #69707a;
   --bs-body-bg: #fff;
   --bs-border-width: 1px;
   --bs-border-style: solid;
-  --bs-border-color: #dee2e6;
+  --bs-border-color: #e0e5ec;
   --bs-border-color-translucent: rgba(0, 0, 0, 0.175);
-  --bs-border-radius: 0.375rem;
+  --bs-border-radius: 0.35rem;
   --bs-border-radius-sm: 0.25rem;
   --bs-border-radius-lg: 0.5rem;
   --bs-border-radius-xl: 1rem;
   --bs-border-radius-2xl: 2rem;
   --bs-border-radius-pill: 50rem;
-  --bs-link-color: #0d6efd;
-  --bs-link-hover-color: #0a58ca;
-  --bs-code-color: #d63384;
-  --bs-highlight-bg: #fff3cd;
+  --bs-link-color: #dc392d;
+  --bs-link-hover-color: #b02e24;
+  --bs-code-color: #e30059;
+  --bs-highlight-bg: #fdeccc;
 }
 
 *,
@@ -7114,6 +7158,11 @@ fieldset:disabled .btn {
   background-color: RGBA(33, 37, 41, var(--bs-bg-opacity, 1)) !important;
 }
 
+.bg-green {
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-green-rgb), var(--bs-bg-opacity)) !important;
+}
+
 .link-primary {
   color: #0d6efd !important;
 }
@@ -8630,6 +8679,82 @@ fieldset:disabled .btn {
 .bg-white {
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-white-rgb), var(--bs-bg-opacity)) !important;
+}
+
+.bg-yellow {
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-yellow-rgb), var(--bs-bg-opacity)) !important;
+}
+
+.bg-green {
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-green-rgb), var(--bs-bg-opacity)) !important;
+}
+
+.bg-purple {
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-purple-rgb), var(--bs-bg-opacity)) !important;
+}
+
+.bg-yellow-soft {
+  --bs-bg-opacity: 1;
+  background-color: rgba(
+    var(--bs-yellow-soft-rgb),
+    var(--bs-bg-opacity)
+  ) !important;
+}
+
+.bg-green-soft {
+  --bs-bg-opacity: 1;
+  background-color: rgba(
+    var(--bs-green-soft-rgb),
+    var(--bs-bg-opacity)
+  ) !important;
+}
+
+.bg-blue-soft {
+  --bs-bg-opacity: 1;
+  background-color: rgba(
+    var(--bs-blue-soft-rgb),
+    var(--bs-bg-opacity)
+  ) !important;
+}
+
+.bg-purple-soft {
+  --bs-bg-opacity: 1;
+  background-color: rgba(
+    var(--bs-purple-soft-rgb),
+    var(--bs-bg-opacity)
+  ) !important;
+}
+
+.bg-primary-soft {
+  --bs-bg-opacity: 1;
+  background-color: rgba(
+    var(--bs-primary-soft-rgb),
+    var(--bs-bg-opacity)
+  ) !important;
+}
+
+.bg-success-soft {
+  --bs-bg-opacity: 1;
+  background-color: rgba(
+    var(--bs-success-soft-rgb),
+    var(--bs-bg-opacity)
+  ) !important;
+}
+
+.bg-warning-soft {
+  --bs-bg-opacity: 1;
+  background-color: rgba(
+    var(--bs-warning-soft-rgb),
+    var(--bs-bg-opacity)
+  ) !important;
+}
+
+.bg-transparent {
+  --bs-bg-opacity: 1;
+  background-color: transparent !important;
 }
 
 .bg-body {
@@ -11714,6 +11839,11 @@ body {
   text-align: center;
 }
 
+#sub-title {
+  color: red;
+  font-weight: bolder;
+  /* background-color: yellow; */
+}
 /* card for PoCRA Juridiction count */
 .center {
   text-align-last: center;
@@ -11772,11 +11902,11 @@ body {
   height: 50rem;
 }
 /* dbt pages */
-.dbt-farmer-map{
+.dbt-farmer-map {
   width: 100%;
   height: 50rem;
 }
-.dbt-nrm-map{
+.dbt-nrm-map {
   width: 100%;
   height: 50rem;
 }
