--- a/css/styles.css
+++ b/css/styles.css
@@ -11825,11 +11825,11 @@ body {
     rgba(252, 176, 69, 1) 90%
   ); */
   background: linear-gradient(
-    90deg,
+	90deg,
     rgba(255, 149, 0, 1) 15%,
-    rgba(255, 255, 255, 1) 50%,
-    rgba(69, 252, 124, 1) 80%
-  );
+	rgba(255, 255, 255, 1) 40%,    
+	rgba(255, 255, 255, 1) 60%,    
+	rgba(52,144,88, 1) 80%  )
 }
 
 .title-logo {
