--- a/css/styles.css
+++ b/css/styles.css
@@ -11825,11 +11825,12 @@ body {
     rgba(252, 176, 69, 1) 90%
   ); */
   background: linear-gradient(
-	90deg,
+    90deg,
     rgba(255, 149, 0, 1) 15%,
-	rgba(255, 255, 255, 1) 40%,    
-	rgba(255, 255, 255, 1) 60%,    
-	rgba(52,144,88, 1) 80%  )
+    rgba(255, 255, 255, 1) 40%,
+    rgba(255, 255, 255, 1) 60%,
+    rgba(52, 144, 88, 1) 80%
+  );
 }
 
 .title-logo {
@@ -11965,7 +11966,7 @@ body {
 /* iframe */
 #bannerContainer {
   background: #b7d6b7;
-  /* padding: auto; */
+  padding: auto;
 }
 .banner {
   /*text-align: center;*/
@@ -11973,7 +11974,6 @@ body {
 }
 .tabs .nav-link {
   color: black !important;
-
   font-size: 20px;
 }
 .tabs .nav-link.active {
