--- a/css/styles.css
+++ b/css/styles.css
@@ -11595,7 +11595,7 @@ body {
   color: rgba(255, 255, 255, 0.9);
 }
 .sb-sidenav-dark .sb-sidenav-menu .nav-link {
-  color: rgba(255, 255, 255, 0.5);
+  color: rgba(255, 255, 255, 0.75);
 }
 .sb-sidenav-dark .sb-sidenav-menu .nav-link .sb-nav-link-icon {
   color: rgba(255, 255, 255, 0.95);
@@ -11604,7 +11604,7 @@ body {
   color: rgba(255, 255, 255, 0.25);
 }
 .sb-sidenav-dark .sb-sidenav-menu .nav-link:hover {
-  color: #fff;
+  color: #ff0000;
 }
 .sb-sidenav-dark .sb-sidenav-menu .nav-link.active {
   color: #fff;
@@ -11922,6 +11922,11 @@ body {
   height: 50rem;
 }
 .dbt-nrm-map {
+  width: 100%;
+  height: 50rem;
+}
+/* weather pages */
+.weather-forecast-map {
   width: 100%;
   height: 50rem;
 }
