checkbox value retrieval

--- a/css/styles.css
+++ b/css/styles.css
@@ -12035,3 +12035,5 @@ This following statements selects each category individually that contains an in
 .checkbox-checked input:checked + span {
   background-color: #82d44e;
 }
+
+/*  */
