implemented flyTo and zoomToExtent features

--- a/css/styles.css
+++ b/css/styles.css
@@ -11990,7 +11990,6 @@ body {
 }
 
 /* Check box for status selection */
-
 .cat {
   background-color: #104068;
   border-radius: 1em;
@@ -12034,6 +12033,40 @@ This following statements selects each category individually that contains an in
 
 .checkbox-checked input:checked + span {
   background-color: #82d44e;
+}
+
+/* Loader animation gif */
+.loader {
+  content: "";
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #003a14;
+  border-bottom: 16px solid #003a14;
+  width: 100px;
+  height: 100px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+}
+
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 /*  */
