created drop down selection in testPage

--- a/css/styles.css
+++ b/css/styles.css
@@ -448,6 +448,8 @@ This following statements selects each category individually that contains an in
 }
 
 /* Custom Map Styling */
+/* Test Page */
+.test-map,
 /* Dashboard Map */
 .administrative-map,
 /* weather pages */
