--- a/css/styles.css
+++ b/css/styles.css
@@ -350,6 +350,7 @@
 }
 
 /* Check box for status selection */
+
 .cat {
   background-color: #104068;
   border-radius: 1em;
@@ -401,10 +402,6 @@ This following statements selects each category individually that contains an in
   background-color: #82d44e;
 }
 
-.abc {
-  background-color: #82d44e;
-}
-
 .btn-grad {
   text-align: center;
   background: linear-gradient(to right, #1a2980 0%, #26d0ce 100%);
@@ -426,7 +423,8 @@ This following statements selects each category individually that contains an in
   transition: 0.3s;
 }
 
-.caption-title {
+.caption-title,
+.popover-text-hover {
   color: white;
   text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
 }
