--- a/css/styles.css
+++ b/css/styles.css
@@ -490,7 +490,8 @@ This following statements selects each category individually that contains an in
 .weather-realtime-map,
 /* dbt pages */
 .dbt-farmer-map,
-.dbt-nrm-map {
+.dbt-nrm-map,
+.dbt-fpo-map {
   width: 100%;
   height: 50rem;
 }
