--- a/css/styles.css
+++ b/css/styles.css
@@ -494,6 +494,7 @@ This following statements selects each category individually that contains an in
 .dbt-fpo-map {
   width: 100%;
   height: 50rem;
+  background-color: lightgray;
 }
 
 /* Custom Control Styling */
